픽셀 스타일, 폰트 추가

--- a/src/style/common/common.scss
+++ b/src/style/common/common.scss
@@ -3,4 +3,4 @@
 @use './mixin' as *;
 @use './functions' as *;
 
-@use 'layout' as *;
+@import url('https://fastly.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
