--- a/src/style/common/_reset.scss
+++ b/src/style/common/_reset.scss
@@ -84,11 +84,11 @@ time,
 mark,
 audio,
 video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -102,51 +102,54 @@ hgroup,
 menu,
 nav,
 section {
-	display: block;
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
+  * {
+    box-sizing: border-box;
+  }
 }
 ol,
 ul {
-	list-style: none;
+  list-style: none;
 }
 blockquote,
 q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
-	-webkit-appearance: none;
-	-moz-appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 input[type='search'] {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
-	box-sizing: content-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 textarea {
-	overflow: auto;
-	vertical-align: top;
-	resize: vertical;
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
 }
 
 /**
@@ -156,10 +159,10 @@ textarea {
 audio,
 canvas,
 video {
-	display: inline-block;
-	// *display: inline;
-	// *zoom: 1;
-	max-width: 100%;
+  display: inline-block;
+  // *display: inline;
+  // *zoom: 1;
+  max-width: 100%;
 }
 
 /**
@@ -168,8 +171,8 @@ video {
  */
 
 audio:not([controls]) {
-	display: none;
-	height: 0;
+  display: none;
+  height: 0;
 }
 
 /**
@@ -178,7 +181,7 @@ audio:not([controls]) {
  */
 
 [hidden] {
-	display: none;
+  display: none;
 }
 
 /**
@@ -189,9 +192,9 @@ audio:not([controls]) {
  */
 
 html {
-	font-size: 100%; /* 1 */
-	-webkit-text-size-adjust: 100%; /* 2 */
-	-ms-text-size-adjust: 100%; /* 2 */
+  font-size: 100%; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+  -ms-text-size-adjust: 100%; /* 2 */
 }
 
 /**
@@ -208,7 +211,7 @@ html {
 
 a:active,
 a:hover {
-	outline: 0;
+  outline: 0;
 }
 
 /**
@@ -217,8 +220,8 @@ a:hover {
  */
 
 img {
-	border: 0; /* 1 */
-	-ms-interpolation-mode: bicubic; /* 2 */
+  border: 0; /* 1 */
+  -ms-interpolation-mode: bicubic; /* 2 */
 }
 
 /**
@@ -226,7 +229,7 @@ img {
  */
 
 figure {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -234,7 +237,7 @@ figure {
  */
 
 form {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -242,9 +245,9 @@ form {
  */
 
 fieldset {
-	border: 1px solid #c0c0c0;
-	margin: 0 2px;
-	padding: 0.35em 0.625em 0.75em;
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
 }
 
 /**
@@ -254,10 +257,10 @@ fieldset {
  */
 
 legend {
-	border: 0; /* 1 */
-	padding: 0;
-	white-space: normal; /* 2 */
-	// *margin-left: -7px; /* 3 */
+  border: 0; /* 1 */
+  padding: 0;
+  white-space: normal; /* 2 */
+  // *margin-left: -7px; /* 3 */
 }
 
 /**
@@ -271,11 +274,11 @@ button,
 input,
 select,
 textarea {
-	font-family: inherit;
-	font-size: 100%; /* 1 */
-	margin: 0; /* 2 */
-	vertical-align: baseline; /* 3 */
-	// *vertical-align: middle; /* 3 */
+  font-family: inherit;
+  font-size: 100%; /* 1 */
+  margin: 0; /* 2 */
+  vertical-align: baseline; /* 3 */
+  // *vertical-align: middle; /* 3 */
 }
 
 /**
@@ -285,7 +288,7 @@ textarea {
 
 button,
 input {
-	line-height: normal;
+  line-height: normal;
 }
 
 /**
@@ -297,7 +300,7 @@ input {
 
 button,
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 /**
@@ -314,9 +317,9 @@ button,
 html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
-	-webkit-appearance: button; /* 2 */
-	cursor: pointer; /* 3 */
-	// *overflow: visible; /* 4 */
+  -webkit-appearance: button; /* 2 */
+  cursor: pointer; /* 3 */
+  // *overflow: visible; /* 4 */
 }
 
 /**
@@ -325,7 +328,7 @@ input[type="submit"] {
 
 button[disabled],
 html input[disabled] {
-	cursor: default;
+  cursor: default;
 }
 
 /**
@@ -337,10 +340,10 @@ html input[disabled] {
 
 input[type='checkbox'],
 input[type='radio'] {
-	box-sizing: border-box; /* 1 */
-	// padding: 0; /* 2 */
-	// *height: 13px; /* 3 */
-	// *width: 13px; /* 3 */
+  box-sizing: border-box; /* 1 */
+  // padding: 0; /* 2 */
+  // *height: 13px; /* 3 */
+  // *width: 13px; /* 3 */
 }
 
 /**
@@ -350,10 +353,10 @@ input[type='radio'] {
  */
 
 input[type='search'] {
-	-webkit-appearance: textfield; /* 1 */
-	-moz-box-sizing: content-box;
-	-webkit-box-sizing: content-box; /* 2 */
-	box-sizing: content-box;
+  -webkit-appearance: textfield; /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box; /* 2 */
+  box-sizing: content-box;
 }
 
 /**
@@ -363,7 +366,7 @@ input[type='search'] {
 
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 /**
@@ -372,8 +375,8 @@ input[type='search']::-webkit-search-decoration {
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-	border: 0;
-	padding: 0;
+  border: 0;
+  padding: 0;
 }
 
 /**
@@ -382,8 +385,8 @@ input::-moz-focus-inner {
  */
 
 textarea {
-	overflow: auto; /* 1 */
-	vertical-align: top; /* 2 */
+  overflow: auto; /* 1 */
+  vertical-align: top; /* 2 */
 }
 
 /**
@@ -391,8 +394,8 @@ textarea {
  */
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 html,
@@ -400,56 +403,56 @@ button,
 input,
 select,
 textarea {
-	color: #000;
+  color: #000;
 }
 
 ::-moz-selection {
-	background: #b3d4fc;
-	text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 ::selection {
-	background: #b3d4fc;
-	text-shadow: none;
+  background: #b3d4fc;
+  text-shadow: none;
 }
 
 img {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 fieldset {
-	border: 0;
-	margin: 0;
-	padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 .chromeframe {
-	margin: 0.2em 0;
-	background: #ccc;
-	color: #000;
-	padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 body {
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-overflow-scrolling: touch;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
 }
 button {
-	border: 0;
-	padding: 0;
-	background: none;
-	cursor: pointer;
+  border: 0;
+  padding: 0;
+  background: none;
+  cursor: pointer;
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
