- 프로젝트 기능 구현 - 코드 리팩토링 및 주석 추가 - 리드미 내용 수정

--- a/src/style/components/Wallet.scss
+++ b/src/style/components/Wallet.scss
@@ -77,6 +77,12 @@
     transform: translateY(vw(2));
   }
 
+  &:disabled {
+    opacity: 0.4;
+    cursor: url('@/assets/images/cursor_default.png'), pointer !important;
+    background: none;
+  }
+
   &:before {
     content: '';
     display: block;
