--- a/src/style/components/VendingMachine.scss
+++ b/src/style/components/VendingMachine.scss
@@ -20,7 +20,7 @@
       contain;
   }
 
-  .drink-menu-container {
+  .drinks-list {
     position: absolute;
     z-index: 3;
     top: vw(11);
@@ -43,12 +43,9 @@
 
     &:before {
       content: '';
-      // position: absolute;
       display: block;
       width: vw(15);
       height: vw(30);
-      background: url('@/assets/images/coke.png') no-repeat center center /
-        contain;
     }
 
     &.coke {
@@ -140,12 +137,13 @@
   height: vw(46);
   padding: vw(6);
   z-index: 3;
-  // background-color: red;
+
   span {
     display: block;
     width: 100%;
-    font-size: vw(8);
+    font-size: vw(7.6);
     font-weight: 400;
+    color: #139fce;
   }
 }
 
@@ -158,7 +156,7 @@
   background: url('@/assets/images/exchange_btn.png') no-repeat center center /
     contain;
   z-index: 3;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.1s ease-in-out;
   &:active {
     transform: rotate(180deg);
   }
@@ -177,16 +175,17 @@
 
   &:hover,
   &:active {
-    .cover {
+    &:before {
       transform: translateY(-60%);
     }
   }
 
-  .cover {
+  &:before {
+    content: '';
     position: relative;
     top: -1px;
     left: 1px;
-    z-index: 0;
+    z-index: 2;
     display: block;
     width: vw(117);
     height: vw(24);
@@ -197,14 +196,66 @@
     transition: transform 0.2s ease-in-out;
   }
 
-  .item {
+  .discharge-item {
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     display: block;
     width: vw(15);
     height: vw(30);
-    background-color: red;
+
+    &.coke {
+      background: url('@/assets/images/coke.png') no-repeat center center /
+        contain;
+    }
+
+    &.water {
+      background: url('@/assets/images/water.png') no-repeat center center /
+        contain;
+    }
+
+    &.coffee {
+      background: url('@/assets/images/coffee.png') no-repeat center center /
+        contain;
+    }
+
+    &.dispensing {
+      animation: dropItem 1s ease-in forwards;
+      pointer-events: none;
+    }
+
+    &.completed {
+      top: 25%;
+      transition: transform 0.2s ease-in-out;
+
+      &:hover {
+        transform: translateX(-50%) scale(1.1);
+      }
+    }
+  }
+}
+
+@keyframes dropItem {
+  0% {
+    top: -500%;
+    transform: translateX(-50%) rotate(0deg);
+  }
+  85% {
+    top: 10%;
+    transform: translateX(-50%) rotate(0deg);
+  }
+  90% {
+    top: -40%;
+    transform: translateX(-50%) rotate(5deg);
+  }
+  95% {
+    top: 0%;
+    transform: translateX(-50%) rotate(-5deg);
+  }
+  100% {
+    top: 25%;
+    transform: translateX(-50%) rotate(0deg);
   }
 }
